--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "rdlowrey/Artax": "dev-master"
+        "amphp/artax": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
